--- a/src/components/PortfolioListCss2.css
+++ b/src/components/PortfolioListCss2.css
@@ -1,7 +1,3 @@
-#work1{
-    width:80%;
-    margin:auto;
-}
 /* section */
 #work1{
     background-color: rgb(40,40,40);
@@ -52,15 +48,6 @@ h3 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
-}
-
-.gallery-item{
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-.gallery-caption{
-    padding:10px;
 }
 
 .gallery-title {
@@ -123,9 +110,13 @@ section {
     content: "";
 }
 
+
+
+
+
 /* table*/
 
->>>a {
+a {
     background-color: transparent;
     color: #89ddff;
     text-decoration: none;
@@ -287,3 +278,4 @@ th {
 table thead {
     font-family: "Quicksand",sans-serif;
 }
+
