--- a/src/components/PortfolioListCss2.scss
+++ b/src/components/PortfolioListCss2.scss
@@ -1,96 +1,17 @@
-<template lang="html">
-  <!-- 포트폴리오 엔트리: 예술의 전당 -->
-  <article role="article" id="work1" class="gallery-item is-init is-animated" data-animation="fade-left">
-      <figure role="group" class="gallery-figure">
-          <div class="gallery-image">
-            <img class="gallery-image-thumb" :src="ports.img" alt="예술의 전당 랜딩 페이지" aria-describedby="work1Description">
-
-          </div>
-          <figcaption class="gallery-caption">
-              <h3 class="gallery-title">{{ports.title}}</h3>
-              <ul class="gallery-spec">
-                  <li class="gallery-spec-item"><strong class="gallery-spec-key">Viewport</strong> <span class="gallery-spec-value">&nbsp{{ports.viewport}}</span></li>
-                  <li class="gallery-spec-item"><strong class="gallery-spec-key">IE support</strong> <span class="gallery-spec-value">&nbsp{{ports.ie_support}}</span></li>
-
-              </ul>
-              <div id="work1Description">
-                  <p>{{ports.content}}</p>
-              </div>
-              <div class="ui-group">
-                  <a role="button" class="ui-button" v-bind:href="ports.demo_url" target="_blank">Demo</a>
-                  <a role="button" class="ui-button" v-bind:href="ports.repos_url" target="_blank">Repos</a>
-              </div>
-          </figcaption>
-      </figure>
-      <table class="gallery-table">
-          <thead>
-              <tr>
-                  <th class="gallery-table-col category">Category</th>
-                  <th class="gallery-table-col source">Source</th>
-                  <th class="gallery-table-col keywords">Related keywords</th>
-              </tr>
-          </thead>
-          <tbody>
-            <template v-for="html in ports.category_html">
-              <tr>
-                  <td data-th="Category"><span class="categ html">HTML</span></td>
-                  <td data-th="Source"><a :href="html.url" target="_blank">{{html.file}}</a></td>
-                  <td data-th="Related Keywords">{{html.keyword}}</td>
-              </tr>
-
-            </template>
-            <template v-for="css in ports.category_css">
-              <tr>
-                <td data-th="Category"><span class="categ css">CSS</span></td>
-                <td data-th="Source"><a :href="css.url" target="_blank">{{css.file}}</a></td>
-                <td data-th="Related Keywords">{{css.keyword}}</td>
-              </tr>
-
-            </template>
-            <template v-for="js in ports.category_js">
-              <tr>
-                <td data-th="Category"><span class="categ js">JS</span></td>
-                <td data-th="Source"><a :href="js.url" target="_blank">{{js.file}}</a></td>
-                <td data-th="Related Keywords">{{js.keyword}}</td>
-              </tr>
-
-            </template>
-
-          </tbody>
-      </table>
-  </article>
-
-</template>
-
-<script>
-import FirebaseService from '@/services/FirebaseServices'
-export default {
-  name :'PortfolioList',
-
-  /*data() {
-    return {
-      ports : this.portfolio
-    }
-  },*/
-  props:{
-
-    ports: {type: null},
-
-  }
+#work1{
+    width:80%;
+    margin:auto;
 }
-</script>
-
-<style lang="css" scoped>
 /* section */
 #work1{
     background-color: rgb(40,40,40);
     color:white;
 }
 
-@media screen and (max-width: 1499px)
-.l-section {
-    padding: 100px 5vw;
-}
+// @media screen and (max-width: 1499px)
+// .l-section {
+//     padding: 100px 5vw;
+// }
 
 .l-section {
     background: white;
@@ -131,6 +52,15 @@ h3 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+}
+
+.gallery-item{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.gallery-caption{
+    padding:10px;
 }
 
 .gallery-title {
@@ -192,10 +122,6 @@ section {
     left: 50%;
     content: "";
 }
-
-
-
-
 
 /* table*/
 
@@ -361,6 +287,3 @@ th {
 table thead {
     font-family: "Quicksand",sans-serif;
 }
-
-
-</style>
