--- a/src/components/dumy/PortfolioListCss1.css
+++ b/src/components/dumy/PortfolioListCss1.css
@@ -1,92 +1,9 @@
-<template lang="html">
-  <!-- 포트폴리오 엔트리: 예술의 전당 -->
-  <article role="article" id="work1" class="gallery-item is-init is-animated" data-animation="fade-left">
-      <figure role="group" class="gallery-figure">
-          <div class="gallery-image">
-            <img class="gallery-image-thumb" :src="ports.img" alt="예술의 전당 랜딩 페이지" aria-describedby="work1Description">
-
-          </div>
-          <figcaption class="gallery-caption">
-              <h3 class="gallery-title">{{ports.title}}</h3>
-              <ul class="gallery-spec">
-                  <li class="gallery-spec-item"><strong class="gallery-spec-key">Viewport</strong> <span class="gallery-spec-value">&nbsp{{ports.viewport}}</span></li>
-                  <li class="gallery-spec-item"><strong class="gallery-spec-key">IE support</strong> <span class="gallery-spec-value">&nbsp{{ports.ie_support}}</span></li>
-
-              </ul>
-              <div id="work1Description">
-                  <p>{{ports.content}}</p>
-              </div>
-              <div class="ui-group">
-                  <a role="button" class="ui-button" v-bind:href="ports.demo_url" target="_blank">Demo</a>
-                  <a role="button" class="ui-button" v-bind:href="ports.repos_url" target="_blank">Repos</a>
-              </div>
-          </figcaption>
-      </figure>
-      <table class="gallery-table">
-          <thead>
-              <tr>
-                  <th class="gallery-table-col category">Category</th>
-                  <th class="gallery-table-col source">Source</th>
-                  <th class="gallery-table-col keywords">Related keywords</th>
-              </tr>
-          </thead>
-          <tbody>
-            <template v-for="html in ports.category_html">
-              <tr>
-                  <td data-th="Category"><span class="categ html">HTML</span></td>
-                  <td data-th="Source"><a :href="html.url" target="_blank">{{html.file}}</a></td>
-                  <td data-th="Related Keywords">{{html.keyword}}</td>
-              </tr>
-
-            </template>
-            <template v-for="css in ports.category_css">
-              <tr>
-                <td data-th="Category"><span class="categ css">CSS</span></td>
-                <td data-th="Source"><a :href="css.url" target="_blank">{{css.file}}</a></td>
-                <td data-th="Related Keywords">{{css.keyword}}</td>
-              </tr>
-
-            </template>
-            <template v-for="js in ports.category_js">
-              <tr>
-                <td data-th="Category"><span class="categ js">JS</span></td>
-                <td data-th="Source"><a :href="js.url" target="_blank">{{js.file}}</a></td>
-                <td data-th="Related Keywords">{{js.keyword}}</td>
-              </tr>
-
-            </template>
-
-          </tbody>
-      </table>
-  </article>
-
-</template>
-
-<script>
-import FirebaseService from '@/services/FirebaseServices'
-export default {
-  name :'PortfolioList',
-
-  /*data() {
-    return {
-      ports : this.portfolio
-    }
-  },*/
-  props:{
-
-    ports: {type: null},
-
-  }
-}
-</script>
-
-<style lang="css" scoped>
-/* section */
 #work1{
-    background-color: #30b7e8;
-    color:white;
+    width:70%;
+    margin:auto;
 }
 
+/* section */
 @media screen and (max-width: 1499px)
 .l-section {
     padding: 100px 5vw;
@@ -104,7 +21,7 @@ export default {
 }
 
 .gallery-title::before {
-    color: white;
+    color: #30b7e8;
     display: inline-block;
     width: 130px;
     position: relative;
@@ -113,7 +30,7 @@ export default {
     line-height: 1;
     font-size: 64px;
     font-weight: 400;
-    content: counter(article,decimal-leading-zero);
+
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -199,9 +116,9 @@ section {
 
 /* table*/
 
-a {
+>>>a {
     background-color: transparent;
-    color: rgb(155, 34, 34);
+    color: #30b7e8;
     text-decoration: none;
     cursor: pointer;
 }
@@ -213,8 +130,8 @@ a {
 }
 
 .categ.css {
-    background: white;
-    color: #00bfdd;
+    background: #00bfdd;
+    color: white;
 }
 
 .categ {
@@ -246,9 +163,9 @@ ul {
 }
 
 .ui-button {
-    background: white;
+    background: #30b7e8;
     border-radius: 44px;
-    color: #30b7e8;
+    color: white;
     display: inline-block;
     min-width: 7em;
     height: 44px;
@@ -259,7 +176,7 @@ ul {
     letter-spacing: -.03em;
     line-height: 18px;
     font-family: "Quicksand",sans-serif;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 500;
     text-align: center;
     box-sizing: border-box;
@@ -321,7 +238,7 @@ p, dl, ol, ul {
 
 
 table {
-    border: 1px solid white;
+    border: 0;
     border-collapse: collapse;
     border-spacing: 0;
     margin: 1em 0;
@@ -340,9 +257,9 @@ td {
 }
 
 table thead th {
-    background-color: rgba(128, 136, 139, 0.5);
+    background-color: rgba(77,128,153,0.05);
     border-top-width: 1px;
-    color: white;
+    color: #94979c;
     padding: 1.2em 1em;
 }
 
@@ -361,6 +278,3 @@ th {
 table thead {
     font-family: "Quicksand",sans-serif;
 }
-
-
-</style>
