--- a/src/components/PortfolioListCss3.scss
+++ b/src/components/PortfolioListCss3.scss
@@ -1,10 +1,51 @@
+#work1{
+    width:80%;
+    margin:auto;
+}
 /* section */
-@media screen and (max-width: 1499px)
-.l-section {
-    padding: 100px 5vw;
+#work1{
+    background-color: #30b7e8;
+    color:white;
 }
 
+#modal{
+    position: fixed; /* Stay in place */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal-out{
+    border : 3px solid yellow;
+    background-color: #30b7e8;
+    position: absolute;
+    top:10%;
+    max-height:80%;
+    left:15%;
+    width:60%;
+    margin:auto;
+    padding:20px;
+    overflow:scroll;
+}
+
+.btn-end{
+    padding:15px;
+    margin:10px;
+    background-color: gray;
+}
+
+// @media screen and (max-width: 1499px)
+// .l-section {
+//     padding: 100px 5vw;
+// }
+
 .l-section {
+    
     background: white;
 }
 
@@ -16,7 +57,7 @@
 }
 
 .gallery-title::before {
-    color: #30b7e8;
+    color: white;
     display: inline-block;
     width: 130px;
     position: relative;
@@ -113,7 +154,7 @@ section {
 
 a {
     background-color: transparent;
-    color: #30b7e8;
+    color: rgb(155, 34, 34);
     text-decoration: none;
     cursor: pointer;
 }
@@ -125,8 +166,8 @@ a {
 }
 
 .categ.css {
-    background: #00bfdd;
-    color: white;
+    background: white;
+    color: #00bfdd;
 }
 
 .categ {
@@ -157,10 +198,10 @@ ul {
     padding-inline-start: 40px;
 }
 
-.ui-button {
-    background: #30b7e8;
+.ui-button, .ui-button a:link, .ui-button a:visited{
+    background-color: white;
     border-radius: 44px;
-    color: white;
+    color: #30b7e8;
     display: inline-block;
     min-width: 7em;
     height: 44px;
@@ -171,7 +212,7 @@ ul {
     letter-spacing: -.03em;
     line-height: 18px;
     font-family: "Quicksand",sans-serif;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     text-align: center;
     box-sizing: border-box;
@@ -233,7 +274,7 @@ p, dl, ol, ul {
 
 
 table {
-    border: 0;
+    border: 1px solid white;
     border-collapse: collapse;
     border-spacing: 0;
     margin: 1em 0;
@@ -252,9 +293,9 @@ td {
 }
 
 table thead th {
-    background-color: rgba(77,128,153,0.05);
+    background-color: rgba(128, 136, 139, 0.5);
     border-top-width: 1px;
-    color: #94979c;
+    color: white;
     padding: 1.2em 1em;
 }
 
@@ -271,5 +312,5 @@ th {
 }
 
 table thead {
-    font-family:"Quicksand",sans-serif;
+    font-family: "Quicksand",sans-serif;
 }
