--- a/src/components/PortfolioListCss1.scss
+++ b/src/components/PortfolioListCss1.scss
@@ -111,12 +111,22 @@ section {
 }
 
 
-
-
-
 /* table*/
+.vhtml >>> a{
+    background-color: transparent;
+    color: #30b7e8;
+    text-decoration: none;
+    cursor: pointer;
+}
 
-a {
+a{
+    background-color: transparent;
+    color: #30b7e8;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+td >>> a{
     background-color: transparent;
     color: #30b7e8;
     text-decoration: none;
