--- a/src/components/portfoliosVues/scss/aboutMe_1.scss
+++ b/src/components/portfoliosVues/scss/aboutMe_1.scss
@@ -1,13 +1,39 @@
+// theme class
+[themeColor=default] {
+  --color-font: #ffffff;
+  --color-bg-about: #1895c5;
+  --color-bg-skill: #1ca8dd;
+  --color-bg-img: #28bdf3c9;
+}
+[themeColor=mint] {
+  --color-font: #ffffff;
+  --color-bg-about: #4d9c75;
+  --color-bg-skill: #68ce9b;
+  --color-bg-img: #28bdf3c9;
+}
+[themeColor=simple_cookie] {
+  --color-font: black;
+  --color-bg-about: #c0c0c0;
+  --color-bg-skill: #d4d4d4;
+  --color-bg-img: #28bdf3c9;
+}
+
+.contentSize {
+  width: 379px;
+}
+
 .aboutMeBody {
-  height: 500px;
-  color: #ffffff;
+  display: flex;
+  height: 650px;
+  color: var(--color-font);
 }
 .aboutMe_about {
-  background-color:  #1895c5;
+  // #1895c5
+  background-color: var(--color-bg-about);
   text-align: right;
 }
 .aboutMe_skills {
-  background: #1ca8dd;
+  background: var(--color-bg-skill);
   text-align: left;
 }
 .aboutMe_subTitle {
@@ -15,4 +41,17 @@
   font-size: 64px;
   padding-bottom: .25em;
   position: relative;
+}
+.aboutMe_images {
+  background: var(--color-bg-img);
+  text-align: left;
+  .aboutContainer {
+    display: none;
+  }
+  .aboutMe_title {
+    display: none;
+  }
+  .aboutMe_image {
+    height: 650px;
+  }
 }
