--- a/src/components/portfoliosVues/PortfolioListCss2.scss
+++ b/src/components/portfoliosVues/PortfolioListCss2.scss
@@ -163,7 +163,7 @@ ul {
     padding-inline-start: 40px;
 }
 
-.ui-button {
+.ui-button, .ui-button a:link, .ui-button a:visited{
     background: #30b7e8;
     border-radius: 44px;
     color: white;
@@ -177,7 +177,7 @@ ul {
     letter-spacing: -.03em;
     line-height: 18px;
     font-family: "Quicksand",sans-serif;
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 500;
     text-align: center;
     box-sizing: border-box;
