--- a/src/components/portfoliosVues/PortfolioElemBase.scss
+++ b/src/components/portfoliosVues/PortfolioElemBase.scss
@@ -17,7 +17,7 @@
 }
 
 .gallery-title::before {
-    color: #30b7e8;
+    // color: #30b7e8;
     display: inline-block;
     width: 130px;
     position: relative;
@@ -45,8 +45,6 @@ h3 {
     margin-inline-end: 0px;
     font-weight: bold;
 }
-
-
 
 .gallery-title {
     position: relative;
@@ -110,26 +108,6 @@ section {
 
 
 /* table*/
-.vhtml >>> a{
-    background-color: transparent;
-    color: #30b7e8;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-a{
-    background-color: transparent;
-    color: #30b7e8;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-td >>> a{
-    background-color: transparent;
-    color: #30b7e8;
-    text-decoration: none;
-    cursor: pointer;
-}
 
 /* categ */
 .categ.html {
@@ -138,8 +116,8 @@ td >>> a{
 }
 
 .categ.css {
-    background: #00bfdd;
-    color: white;
+    // background: #00bfdd;
+    // color: white;
 }
 
 .categ {
@@ -171,9 +149,9 @@ ul {
 }
 
 .ui-button, .ui-button a:link, .ui-button a:visited{
-    background: #30b7e8;
+    
     border-radius: 44px;
-    color: white;
+    
     display: inline-block;
     min-width: 7em;
     height: 44px;
@@ -246,16 +224,16 @@ p, dl, ol, ul {
 
 
 table {
-    border: 0;
+    
     border-collapse: collapse;
     border-spacing: 0;
-    margin: 1em 0;
+    // margin: 1em;
     width: 100%;
 }
 
 table th, table td {
     border-bottom: 1px solid #e6e9ea;
-    padding: .3em 1em;
+    padding: .3em 1em ;
     text-align: left;
 }
 
@@ -265,10 +243,10 @@ td {
 }
 
 table thead th {
-    background-color: rgba(77,128,153,0.05);
+    
     border-top-width: 1px;
-    color: #94979c;
-    padding: 1.2em 1em;
+    
+    padding: 1.2em 1em ;
 }
 
 table caption, table th {
