--- a/src/components/portfoliosVues/scss/aboutMe_2.scss
+++ b/src/components/portfoliosVues/scss/aboutMe_2.scss
@@ -1,3 +1,22 @@
+[themeColor=default] {
+  --color-font: #ffffff;
+  --color-bg-about: #1895c5;
+  --color-bg-skill: #1ca8dd;
+  --color-bg-img: #28bdf3c9;
+}
+[themeColor=mint] {
+  --color-font: #ffffff;
+  --color-bg-about: #4d9c75;
+  --color-bg-skill: #68ce9b;
+  --color-bg-img: #28bdf3c9;
+}
+[themeColor=simple_cookie] {
+  --color-font: black;
+  --color-bg-about: #c0c0c0;
+  --color-bg-skill: #d4d4d4;
+  --color-bg-img: #28bdf3c9;
+}
+
 .aboutMeBody {
   display: block;
   height: 500px;
